# fri-robot-lead

./: .gitignore  CMakeLists.txt  README.md  TODO  package.xml  robot_lead_simulation.launch
fri_robot_lead/: .gitignore  CMakeLists.txt  TODO  package.xml
fri_robot_lead/launch/: person_detector.launch  robot_lead.launch  robot_lead_v2.launch
fri_robot_lead/msg/: PersonPresent.msg
fri_robot_lead/src/: leader.cpp  leader.cpp~  person_detector.cpp
launch/: robot_lead_simulation.launch  robot_lead_v2.launch
lead_rqt_plugins/: CMakeLists.txt  package.xml  python_plugin.xml  setup.py
lead_rqt_plugins/scripts/: room_dialog_plugin
lead_rqt_plugins/src/lead_rqt_plugins/: .plugins.py.swp  plugins.py
lead_rqt_plugins/srv/: RoomDialog.srv
new_rqt/: package.xml  plugin.xml  setup.py
new_rqt/resource/: GuidePlugin.ui
new_rqt/src/new_rqt/: room_dialog.py
src/: #leader.cpp#  .leader.cpp.swp  leader.cpp
