<?xml version="1.0"?>
<package>
  <name>fri_robot_lead</name>
  <version>1.0.0</version>
  <description>Allows robots to guide users to a location</description>

  <maintainer email="sxtejeda@gmail.com">Stone Tejeda</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>

