<?xml version="1.0"?>
<package>
  <name>fri_robot_lead</name>
  <version>1.0.0</version>
  <description>Allows robots to guide users to a location</description>

  <maintainer email="sxtejeda@gmail.com">Stone Tejeda</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>

