<?xml version="1.0"?>
<package format="2">
  <name>lead_rqt_plugins</name>
  <version>0.0.0</version>
  <description>
    Modifies and extends rqt plugins for question dialogues to allow dropdowns
  </description>

  <maintainer email="lukewright@utexas.edu">Luke Wright</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>bwi_msgs</depend>
  <depend>class_loader</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/python_plugins.xml"/>
  </export>

</package>
