<?xml version="1.0"?>
<package>
  <name>new_rqt</name>
  <version>0.0.0</version>
  <description>new_rqt is a gui for the new iteration of the fri_robot_lead package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sxtejeda98@gmail.com">Stone Tejeda</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


 <author email="sxtejeda98@gmail.com">Stone Tejeda</author> 


 <buildtool_depend>catkin</buildtool_depend>
	
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

	<!-- Note: no build depends are needed, as this plugin is written in Python-->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
		<architecture_independent/>
		<rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
